--- a/src/components/Courses/components/CourseCard/CourseCard.scss
+++ b/src/components/Courses/components/CourseCard/CourseCard.scss
@@ -11,6 +11,7 @@
     background-color: $whiteColor;
     box-shadow: 2px 0px 8px $grayBasicColor;
     padding: 1.5rem 1rem;
+    min-width: 100%;
 
     .card-title{
         font:{
