--- a/src/components/CourseInfo/CourseInfo.scss
+++ b/src/components/CourseInfo/CourseInfo.scss
@@ -27,6 +27,7 @@
         padding: 6rem 0;
         margin: 2rem 0;
         align-items: center;
+        width: 100%;
 
         .course-info-description{
             display: flex;
