--- a/src/components/Courses/components/CourseCard/CourseCard.scss
+++ b/src/components/Courses/components/CourseCard/CourseCard.scss
@@ -55,6 +55,13 @@
                     white-space: nowrap;
                 }
             }
+            .course-card-btns{
+                display: flex;
+
+                .delete-course-btn{
+                    margin: 0 1rem;
+                }
+            }
         }
     }
 }
