--- a/src/components/Courses/components/CourseCard/CourseCard.scss
+++ b/src/components/Courses/components/CourseCard/CourseCard.scss
@@ -61,6 +61,10 @@
                 .delete-course-btn{
                     margin: 0 1rem;
                 }
+
+                .edit-course-btn{
+                    height: 100%;
+                }
             }
         }
     }
